<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="menu_settings">Settings</string>
    <string name="title_activity_main">MainActivity</string>
    
    <string name="app_name">吃什么</string>
    <string name="exit">退出</string>
    <string name="img">ImageView</string>
    <string name="index">首页</string>
    <string name="update">更新</string>
    <string name="about">关于</string>
    <string name="menu">菜单</string>
    <string name="recommend">今日推荐</string>
    <string name="roomstore">送餐店铺</string>
    <string name="versionandupdate">版本更新</string>
    <string name="helpandreturn">帮助与反馈</string>
    <string name="aboutus">关于我们</string>
    <string name="wechat">微博</string>
    <string name="webo">微信</string>
    <string name="lijitiyan">立即体验</string>
    <string name="enterthekey">请输入关键字</string>
    <string name="cag">A</string>
    <string name="tijiao">提交</string>
      <string name="quxiao">取消</string>
    <string name="yijian">请把您的宝贵建议提交给我们。。</string>
    <string name="chanpinjieshao">产品介绍</string>
    <string name="content">本产品是由哈尔滨精灵科技有限责任公司手机部研发，是面向在校大学生的一款订餐软件，目的是为大学生创造更方便快捷的生活</string>
    <string name="lianxifangshi">联系方式</string>
    <string name="lianxicontent">QQ:563754084\n微信：xzg-19930723\n手机:13009721960</string>
    <string name="yijianfankui">意见反馈</string>
    <string name="copyright">Copyright@2014 JingLing All Rights Reserved</string>

</resources>