<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/gray"
    android:orientation="vertical" >

    <include
        android:id="@+id/include_about"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        layout="@layout/activity_top" >
    </include>

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="180sp" >

        <ImageView
            android:id="@+id/about_logo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:background="@drawable/logo" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/about_logo"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="20sp"
            android:shadowColor="@android:color/darker_gray"
            android:shadowDx="3"
            android:shadowDy="2"
            android:shadowRadius="2"
            android:text="@string/app_name"
            android:textColor="@color/bgc"
            android:textSize="20sp" />
    </RelativeLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="2dp"
        android:background="@drawable/dotted_line" />

    <LinearLayout
        style="@style/list_item_top"
        android:layout_width="fill_parent"
        android:layout_height="35dp"
        android:layout_marginBottom="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="20dp"
        android:gravity="left|center_vertical" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/versionandupdate"
            android:textColor="@color/bgc"
            android:textSize="14sp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/feedback"
        style="@style/list_item_middle"
        android:layout_width="fill_parent"
        android:layout_height="35dp"
        android:layout_marginBottom="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="5dp"
        android:gravity="left|center_vertical" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/helpandreturn"
            android:textColor="@color/bgc"
            android:textSize="14sp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/aboutUs"
        style="@style/list_item_bottom"
        android:layout_width="fill_parent"
        android:layout_height="35dp"
        android:layout_marginBottom="20sp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="5dp"
        android:gravity="left|center_vertical" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/aboutus"
            android:textColor="@color/bgc"
            android:textSize="14sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="2dp"
        android:background="@drawable/dotted_line" />

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" >

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_above="@+id/copyright"
            android:gravity="center_horizontal"
            android:orientation="horizontal" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/wechat"
                android:textColor="@color/bgc" />

            <LinearLayout
                android:layout_width="2dp"
                android:layout_height="fill_parent"
                android:background="@drawable/dotted_line"
                android:textColor="@color/bgc" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/webo"
                android:textColor="@color/bgc" />
        </LinearLayout>

        <TextView
            android:id="@+id/copyright"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:text="@string/copyright" />
    </RelativeLayout>

</LinearLayout>