<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/bgc"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight="2"
        android:orientation="vertical" >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:textColor="#fff"
            android:text="@string/index"
            android:textSize="24sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight="16"
        android:baselineAligned="false"
        android:background="#ffff"
        android:orientation="horizontal" >

        <LinearLayout
            android:id="@+id/recommend_layout"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_marginRight="1dp"
            android:layout_marginTop="1dp"
            android:layout_weight="1"
            android:background="@color/bgc"
            android:gravity="center_vertical"
            android:orientation="vertical" >

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:src="@drawable/heart" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:text="@string/recommend"
                android:textColor="#fff"
                android:textSize="16sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_marginTop="1dp"
            android:layout_weight="1"
            android:orientation="vertical" >

            <LinearLayout
                android:id="@+id/menu_layout"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_marginBottom="1dp"
                android:layout_weight="1"
                android:background="@color/bgc"
                android:gravity="center_vertical"
                android:orientation="vertical" >

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:src="@drawable/menu" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:text="@string/menu"
                    android:textColor="#fff"
                    android:textSize="16sp" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/update_layout"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_weight="1"
                android:background="@color/bgc"
                android:gravity="center_vertical"
                android:orientation="vertical" >

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:src="@drawable/xing" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:text="@string/update"
                    android:textColor="#fff"
                    android:textSize="16sp" />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight="8"
        android:background="@color/bgc"
        android:orientation="horizontal" >

        <LinearLayout
            android:id="@+id/about_layout"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_marginRight="1dp"
            android:layout_weight="1"
            android:background="#ffffff"
            android:gravity="center_vertical"
            android:orientation="vertical" >

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:src="@drawable/about" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:text="@string/about"
                android:textColor="@color/bgc"
                android:textSize="16sp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/exit_layout"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:background="#ffffff"
            android:gravity="center_vertical"
            android:orientation="vertical" >

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:src="@drawable/exit" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:text="@string/exit"
                android:textColor="@color/bgc"
                android:textSize="16sp" />
        </LinearLayout>
    </LinearLayout>

</LinearLayout>